Feature/e9 port hack (#3)
* Added type trait is_same
  Added concept same_as
* Added arch x86_64 io
* Switch to c/c++ standard from GNU c/c++ standard
* Added debugcon to qemu custom target
* Added basic string_view
  Added arch::print

--- a/image/meson.build
+++ b/image/meson.build
@@ -50,6 +50,7 @@ run_image = custom_target('run_image',
         'qemu-system-' + arch, 
         '-M', 'q35',
         '-m', '2G',
+        '-debugcon', 'stdio',
         '-D', log_dir / 'qemu-' + arch + '.log',
         extra_qemu_args,
         '-cdrom', '@INPUT@',
