Feature/nano_libc_with_tests (#4)
Added catch2 wrap
Added c string.h (mem only)
Added c string tests
Added string_view (no functionalities)
Added string_view tests

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -26,11 +26,10 @@ c_ccp_args = [
 
 kernel_elf = executable(
     'kernel.elf', src_files,
-    install : false,
-    pie: true,
+    install : false, pie : true,
     dependencies : [
-        dependency('limine'),
-        libcore_dep
+        limine_dep,
+        libc_dep
     ],
     c_args : [
         c_ccp_args,
