Renamed folder abi to lang (#7)

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -1,8 +1,8 @@
 src_files = files(
-    './abi/cxxabi.cpp',
     './arch' / arch / 'arch.cpp',
     './boot/loader.cpp',
     './boot/start.cpp',
+    './lang/cxxabi.cpp',
     './kernel.cpp'
 )
 
