--- a/.github/workflows/native-unit-tests.yml
+++ b/.github/workflows/native-unit-tests.yml
@@ -1,12 +1,12 @@
 ---
-name: native
+name: Native Unit Tests
 
 on:
   push:
 
 jobs:
-  build:
-    name: Build
+  build-and-tests:
+    name: Build and Tests
     runs-on: ubuntu-22.04
     container: i73v/nos-build-machine:latest
 
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Native
+      - name: Setup
         run: |
           task setup:native
 
