Run workflows on pull_request for main (#16)
* Run workflows on pull_request for main
* Upper name of the job
* Renamed jobs to better identify then in GitHub status checks (wish it was using IDs and not their name)

--- a/.github/workflows/native-unit-tests.yml
+++ b/.github/workflows/native-unit-tests.yml
@@ -3,10 +3,13 @@ name: Native Unit Tests
 
 on:
   push:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build-and-tests:
-    name: Build and Tests
+  native-unit-tests:
+    name: Native Unit Tests
     runs-on: ubuntu-22.04
     container: i73v/nos-build-machine:latest
 
