--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -3,10 +3,13 @@ name: Kernel
 
 on:
   push:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
-    name: build
+  kernel:
+    name: Kernel
     runs-on: ubuntu-22.04
     container: i73v/nos-build-machine:latest
 
