Replaced Kernel formatting functionality with libncxx (#18)
* Replaced Kernel formatting functionality with libncxx

* Fixed format-to filename change

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -3,6 +3,7 @@ src = files(
     'source/boot/loader.cpp',
     'source/boot/start.cpp',
     'source/lang/cxxabi.cpp',
+    'source/utility/cstring.cpp',
     'source/utility/log.cpp',
     'source/kernel.cpp'
 )
