Added release build in github workflow (#23)
Simplified Taskfile
Updated workflows
Set mcmodel=large for kernel

--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -13,15 +13,19 @@ jobs:
     runs-on: ubuntu-22.04
     container: i73v/nos-build-machine:latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        build-type: [debug, release]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup
         run: |
-          task setup:kernel
+          task kernel:setup BUILD_TYPE=${{ matrix.build-type }}
 
       - name: Compile
         run: |
-          task compile -- kernel.elf
-
+          task kernel:compile BUILD_TYPE=${{ matrix.build-type }}
