--- a/Taskfile.dist.yml
+++ b/Taskfile.dist.yml
@@ -2,56 +2,41 @@
 version: '3'
 
 env:
-  ARCH: x86_64
-  BUILD_DIR: build
+  ARCH: '{{.ARCH | default "x86_64"}}'
+  BUILD_TYPE: '{{.BUILD_TYPE | default "debug"}}'
+  BUILD_DIR: 'build'
 
 dotenv: ['.env']
 
 tasks:
-  setup:kernel:
+  kernel:setup:
     cmds: 
-      - meson setup $BUILD_DIR --buildtype debug --cross-file config/$ARCH/kernel.cross-file
+      - meson setup $BUILD_DIR/kernel/$ARCH/$BUILD_TYPE --buildtype $BUILD_TYPE --cross-file config/$ARCH/kernel.cross-file
 
-  setup:kernel-release:
-    cmds: 
-      - meson setup $BUILD_DIR --buildtype release --cross-file config/$ARCH/kernel.cross-file
-
-  setup:native:
-    cmds: 
-      - meson setup $BUILD_DIR --buildtype debug --native-file config/native.native-file
-
-  setup:native-release:
-    cmds: 
-      - meson setup $BUILD_DIR --buildtype release --native-file config/native.native-file
-
-  setup:redo:
-    cmds: 
-      - meson setup --wipe $BUILD_DIR
-
-  setup:wipe:
-    cmds: 
-      - rm -r $BUILD_DIR
-
-  compile:
-    cmds: 
-      - cd build && meson compile {{.CLI_ARGS}}
-
-  compile-all:
-    cmds: 
-      - cd build && meson compile
-
-  test:
-    cmds: 
-      - cd build && meson test {{.CLI_ARGS}}
-
-  test-all:
-    cmds: 
-      - cd build && meson test
-
-  image:build:
-    cmds: 
-      - cd build && meson compile image
-    
-  image:run:
+  kernel:compile:
     cmds:
-      - qemu-system-$ARCH -M q35 -m 2G -serial stdio -debugcon file:logs/qemu-debugcon.log -cdrom build/image/nos-$ARCH.iso -boot d
+      - cd $BUILD_DIR/kernel/$ARCH/$BUILD_TYPE && meson compile kernel.elf
+
+  kernel:image:build:
+    cmds:
+      - cd $BUILD_DIR/kernel/$ARCH/$BUILD_TYPE && meson compile image
+
+  kernel:image:run:
+    cmds:
+      - qemu-system-$ARCH -M q35 -m 2G -serial stdio -debugcon file:logs/qemu-debugcon.log -cdrom $BUILD_DIR/kernel/$ARCH/$BUILD_TYPE/image/nos-$ARCH.iso -boot d
+
+  native:setup:
+    cmds: 
+      - meson setup $BUILD_DIR/native/$BUILD_TYPE --buildtype $BUILD_TYPE --native-file config/native.native-file
+
+  native:compile:
+    cmds:
+      - cd $BUILD_DIR/native/$BUILD_TYPE && meson compile {{.CLI_ARGS}}
+
+  native:test:
+    cmds:
+      - cd $BUILD_DIR/native/$BUILD_TYPE && meson test {{.CLI_ARGS}}
+
+  clear:
+    cmds:
+      - rm -r $BUILD_DIR
