feat: Add x86_64 GDT initialization (#29)
This commit adds the necessary code to initialize the Global Descriptor Table (GDT) for the x86_64 architecture. The GDT is responsible for managing memory segmentation and access control. It includes the definition of GDT entries, TSS entry, and GDTR structure. The `initialize()` function sets up the GDT by loading it into memory using inline assembly instructions. Additionally, a new header file `gdt.hpp` is added to provide an interface for initializing the GDT.

Other changes in this commit include:
- Adding a new file `arch.cpp` that includes `arch.hpp`.
- Updating `kernel.cpp` to call `Arch::initialize()` during kernel initialization.
- Removing unused files and updating build configuration.

The commit also introduces some utility functions and concepts in the NCXX library:
- A concept called `Enumeration` is defined in `enumeration.hpp`, which checks if a type is an enumeration.
- A macro called `NOS_PACKED` is defined in `packed.hpp`, which applies GCC's packed attribute to a struct or class.
- A function template called `toUnderlyingType()` is defined in `to-underlying-type.hpp`, which converts an enumeration value to its underlying integral type.

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -1,4 +1,5 @@
 src = files(
+    'kernel/arch/arch.cpp',
     'kernel/debug/assert.cpp',
     'kernel/lang/cxxabi.cpp',
     'kernel/lang/ubsan.cpp',
@@ -12,8 +13,8 @@ src = files(
 # x86_64 specific files
 if arch == 'x86_64'
     src += files(
-#        'kernel/arch/x86_64/cpu/gdt.cpp',
-        'kernel/arch/x86_64/drivers/serial.cpp'
+        'kernel/arch/x86_64/drivers/serial.cpp',
+        'kernel/arch/x86_64/gdt.cpp'
     )
 endif
 
