Rudimentary IDT implementation (#31)
Created a new file `kernel/kernel/arch/x86_64/cpu-registers-push-pop.inc` for pushing and popping CPU registers
- Added code to push and pop all CPU registers in the interrupt handler in `kernel/kernel/arch/x86_64/idt.S`
- Added a new file `kernel/kernel/arch/x86_64/idt.cpp` for IDT related functions
- Updated the interrupt handling logic in the dispatch function of `kernel/kernel/arch/x86_64/idt.cpp`
- Modified the print function in `kernel/kernel/lang/ubsan.cpp` to log errors instead of warnings

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -14,7 +14,9 @@ src = files(
 if arch == 'x86_64'
     src += files(
         'kernel/arch/x86_64/drivers/serial.cpp',
-        'kernel/arch/x86_64/gdt.cpp'
+        'kernel/arch/x86_64/gdt.cpp',
+        'kernel/arch/x86_64/idt.cpp',
+        'kernel/arch/x86_64/idt.S'
     )
 endif
 
