Implemented new with simple stack allocator
Implementations for operator new, operator new[], operator delete, and operator delete[] using a stack allocator.

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -3,6 +3,7 @@ src = files(
     'kernel/debug/assert.cpp',
     'kernel/lang/cxxabi.cpp',
     'kernel/lang/ubsan.cpp',
+    'kernel/lang/new.cpp',
     'kernel/utility/cstring.cpp',
     'kernel/utility/log.cpp',
     'kernel/utility/panic.cpp',
