Renamed classes to use commonly known initial
- Renamed `GlobalDescriptorTable` class to `GDT`
- Renamed `InterruptDescriptorTable` class to `IDT`
- Renamed `TaskStateSegment` class to `TSS`
- Renamed `ProgrammableInterruptController` class to `PIC`

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -16,11 +16,11 @@ if arch == 'x86_64'
     src += files(
         'kernel/arch/x86_64/drivers/serial.cpp',
         'kernel/arch/x86_64/arch.cpp',
-        'kernel/arch/x86_64/global-descriptor-table.cpp',
-        'kernel/arch/x86_64/interrupt-descriptor-table.cpp',
-        'kernel/arch/x86_64/interrupt-descriptor-table.S',
-        'kernel/arch/x86_64/programmable-interrupt-controller.cpp',
-        'kernel/arch/x86_64/task-state-segment.cpp'
+        'kernel/arch/x86_64/gdt.cpp',
+        'kernel/arch/x86_64/idt.cpp',
+        'kernel/arch/x86_64/idt.S',
+        'kernel/arch/x86_64/pic.cpp',
+        'kernel/arch/x86_64/tss.cpp'
     )
 endif
 
